build/log/idf_py_stdout_output_21412
[1/10] Performing build step for 'bootloader'
[1/1] cd "/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/build/bootloader/esp-idf/esptool_py" && /home/studiopresent/.espressif/python_env/idf5.3_py3.12_env/bin/python /home/studiopresent/ESP/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++\ implementation/Smart_Lock/build/bootloader/bootloader.bin
Bootloader binary size 0x5500 bytes. 0x2b00 bytes (34%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj 
/home/studiopresent/.espressif/tools/riscv32-esp-elf/esp-13.2.0_20240530/riscv32-esp-elf/bin/riscv32-esp-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.3-dirty\" -DRCP_COMPILE_DEFINE="\"zigbee-e0991facf5-9a1952e-1.0.9-2024-09-03 05:19:43 UTC\"" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I"/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/build/config" -I"/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/main" -I/home/studiopresent/ESP/esp-idf/components/newlib/platform_include -I/home/studiopresent/ESP/esp-idf/components/freertos/config/include -I/home/studiopresent/ESP/esp-idf/components/freertos/config/include/freertos -I/home/studiopresent/ESP/esp-idf/components/freertos/config/riscv/include -I/home/studiopresent/ESP/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/studiopresent/ESP/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/studiopresent/ESP/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/home/studiopresent/ESP/esp-idf/components/freertos/esp_additions/include -I/home/studiopresent/ESP/esp-idf/components/esp_hw_support/include -I/home/studiopresent/ESP/esp-idf/components/esp_hw_support/include/soc -I/home/studiopresent/ESP/esp-idf/components/esp_hw_support/include/soc/esp32c6 -I/home/studiopresent/ESP/esp-idf/components/esp_hw_support/dma/include -I/home/studiopresent/ESP/esp-idf/components/esp_hw_support/ldo/include -I/home/studiopresent/ESP/esp-idf/components/esp_hw_support/port/esp32c6/. -I/home/studiopresent/ESP/esp-idf/components/esp_hw_support/port/esp32c6/include -I/home/studiopresent/ESP/esp-idf/components/esp_hw_support/port/esp32c6/private_include -I/home/studiopresent/ESP/esp-idf/components/heap/include -I/home/studiopresent/ESP/esp-idf/components/log/include -I/home/studiopresent/ESP/esp-idf/components/soc/include -I/home/studiopresent/ESP/esp-idf/components/soc/esp32c6 -I/home/studiopresent/ESP/esp-idf/components/soc/esp32c6/include -I/home/studiopresent/ESP/esp-idf/components/hal/platform_port/include -I/home/studiopresent/ESP/esp-idf/components/hal/esp32c6/include -I/home/studiopresent/ESP/esp-idf/components/hal/include -I/home/studiopresent/ESP/esp-idf/components/esp_rom/include -I/home/studiopresent/ESP/esp-idf/components/esp_rom/include/esp32c6 -I/home/studiopresent/ESP/esp-idf/components/esp_rom/esp32c6 -I/home/studiopresent/ESP/esp-idf/components/esp_common/include -I/home/studiopresent/ESP/esp-idf/components/esp_system/include -I/home/studiopresent/ESP/esp-idf/components/esp_system/port/soc -I/home/studiopresent/ESP/esp-idf/components/esp_system/port/include/riscv -I/home/studiopresent/ESP/esp-idf/components/esp_system/port/include/private -I/home/studiopresent/ESP/esp-idf/components/riscv/include -I/home/studiopresent/ESP/esp-idf/components/lwip/include -I/home/studiopresent/ESP/esp-idf/components/lwip/include/apps -I/home/studiopresent/ESP/esp-idf/components/lwip/include/apps/sntp -I/home/studiopresent/ESP/esp-idf/components/lwip/lwip/src/include -I/home/studiopresent/ESP/esp-idf/components/lwip/port/include -I/home/studiopresent/ESP/esp-idf/components/lwip/port/freertos/include -I/home/studiopresent/ESP/esp-idf/components/lwip/port/esp32xx/include -I/home/studiopresent/ESP/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/studiopresent/ESP/esp-idf/components/lwip/port/esp32xx/include/sys -I"/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/components/lock_driver/include" -I/home/studiopresent/ESP/esp-idf/components/esp_driver_uart/include -I/home/studiopresent/ESP/esp-idf/components/vfs/include -I/home/studiopresent/ESP/esp-idf/components/esp_driver_gpio/include -I"/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/components/uart_driver/include" -I"/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/components/zigbee/include" -I"/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/managed_components/espressif__esp-zigbee-lib/include" -I"/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/managed_components/espressif__esp-zboss-lib/include" -I/home/studiopresent/ESP/esp-idf/components/nvs_flash/include -I/home/studiopresent/ESP/esp-idf/components/spi_flash/include -I/home/studiopresent/ESP/esp-idf/components/esp_partition/include -march=rv32imac_zicsr_zifencei  -g -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap "-fmacro-prefix-map=/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock=." -fmacro-prefix-map=/home/studiopresent/ESP/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj -c '/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/main/main.cpp'
/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/main/main.cpp: In function 'void app_main()':
/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/main/main.cpp:32:32: error: cannot convert 'uint8_t (*)[8]' {aka 'unsigned char (*)[8]'} to 'const uint8_t*' {aka 'const unsigned char*'}
   32 |     esp_zb_set_extended_pan_id(&extended_pan_id);
      |                                ^~~~~~~~~~~~~~~~
      |                                |
      |                                uint8_t (*)[8] {aka unsigned char (*)[8]}
In file included from /home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/components/zigbee/include/zigbee.hpp:5,
                 from /home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/main/main.cpp:3:
/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/managed_components/espressif__esp-zigbee-lib/include/esp_zigbee_core.h:434:58: note:   initializing argument 1 of 'void esp_zb_set_extended_pan_id(const uint8_t*)'
  434 | void esp_zb_set_extended_pan_id(const esp_zb_ieee_addr_t ext_pan_id);
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/main/main.cpp:33:30: error: expected primary-expression before ')' token
   33 |     esp_zb_set_pan_id(0x7CF5,);
      |                              ^
/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/main/main.cpp:16:17: warning: unused variable 'TAG' [-Wunused-variable]
   16 |     const char *TAG = "ESP32_LOCK_UART";
      |                 ^~~
ninja: build stopped: subcommand failed.
